--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular": "angularjs#^1.8.2",
     "angular-locale-pt-br": "^1.3.15",
     "angular-messages": "^1.8.2",
-    "bootstrap": "3.4.1"
-   
+    "angular-route": "^1.8.2",
+    "bootstrap": "3.4.1",
+    "bower": "*",
+    "install": "^1.0.4"
   }
 }
